Add project branch history API
